src/test/deca/syntax/valid/provided/Not.deca
// DESCRIPTION : Utilisation de not sur un boolean
{
    boolean a = true;
    boolean nota = !a;
}
