src/test/deca/syntax/invalid/provided/LeftOperandMissing.deca
// DESCRIPTION: Opération binaire sans Left Operand
{
  a = && false;
}
